-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.1
-
c9edc164ab165ddd31ef2411be19deb130614e8b
When using QQuickWidget on a Mac with Retina display (devicePixelRatio = 2) to embed a QML Qt3D Scene3D, the viewport is not scaled properly, i.e. the scene is drawn only in the left lower quadrant. This happens in my app but can be seen directly when running the standard "widgets-scene3d" Qt3D example. An output of this example on a MacBook Pro (15-inch, Late 2016) is attached.