Set devicePixelRatio on item size change

Propagate the dpr to the QRenderSurfaceSelector in
addition to the the item size.

Task-number: QTBUG-62235
Change-Id: I6555685392334b8edf2327fae97d5d531cffeaae
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>